--- a/SimpleWeather.UWP/App.xaml
+++ b/SimpleWeather.UWP/App.xaml
@@ -3,6 +3,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:helpers="using:SimpleWeather.UWP.Helpers"
+    xmlns:coding4fun="using:Coding4Fun.Toolkit.Controls"
     RequestedTheme="Light">
     <Application.Resources>
         <helpers:BooleanToVisibilityConverter x:Key="booleanToVisibilityConverter" />
@@ -828,5 +829,16 @@
                 </Setter.Value>
             </Setter>
         </Style>
+        <ControlTemplate x:Key="ToastPromptStyle" TargetType="coding4fun:ToastPrompt">
+            <Border CornerRadius="15" Background="{TemplateBinding Background}"
+                    Height="{TemplateBinding Height}"
+                    Width="{TemplateBinding Width}"
+                    VerticalAlignment="{TemplateBinding VerticalAlignment}"
+                    HorizontalAlignment="{TemplateBinding HorizontalAlignment}">
+                <TextBlock Text="{TemplateBinding Message}" Foreground="{TemplateBinding Foreground}"
+                           FontFamily="14" Margin="10"
+                           TextWrapping="NoWrap" />
+            </Border>
+        </ControlTemplate>
     </Application.Resources>
 </Application>
