SimpleWeather: switch to SnackBar style for errors
* Add error callback for errors in WeatherLoader
* Use SnackBar for error messages
* Add retry action to SnackBar for WeatherNow and Locations view
* UWP: Import custom Android-like snackbar from https://github.com/Amrykid/Kimono

--- a/SimpleWeather.Android/Resources/layout/fragment_locations.xml
+++ b/SimpleWeather.Android/Resources/layout/fragment_locations.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/fragment_locations"
@@ -8,7 +8,7 @@
     tools:context="SimpleWeather.Droid.Controls.LocationsFragment"
     android:background="@android:color/white">
 
-    <ScrollView
+    <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:fillViewport="true"
@@ -60,28 +60,26 @@
                 android:id="@+id/locations_container"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_above="@+id/locations_add"
                 android:layout_below="@+id/favorite_label"
                 android:orientation="vertical" />
-
-            <android.support.design.widget.FloatingActionButton
-                android:id="@+id/locations_add"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:layout_alignParentEnd="true"
-                android:layout_margin="16dp"
-                android:src="@drawable/ic_add_white_24dp"
-                android:tint="@android:color/white"
-                app:backgroundTint="@color/colorPrimary"
-                app:elevation="4dp"
-                app:fabSize="normal" />
         </RelativeLayout>
-    </ScrollView>
+    </android.support.v4.widget.NestedScrollView>
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/locations_add"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="16dp"
+        android:src="@drawable/ic_add_white_24dp"
+        android:tint="@android:color/white"
+        app:backgroundTint="@color/colorPrimary"
+        app:elevation="4dp"
+        app:fabSize="normal" />
 
     <RelativeLayout
         android:id="@+id/search_fragment_container"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:clickable="true" />
-</RelativeLayout>
+</android.support.design.widget.CoordinatorLayout>
